--- a/app/src/main/res/layout/list_item_zodiac.xml
+++ b/app/src/main/res/layout/list_item_zodiac.xml
@@ -4,19 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/zodiac_name"
-        style="@style/zodaic2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-light"
         android:text="Zodiac Name"
         android:textAlignment="center"
         android:textAppearance="?attr/textAppearanceHeadline6"
+        android:textColor="@color/design_default_color_error"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
